--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul class="menu">
-        <li>
-            <a class="main" href="#">Menu here</a>
+    <div class="menu">
+        
+            <a class="text" href="#">Menu here</a>
             <ul class="submenu">
                 <li class="item"><a href="#">home</a></li>
                 <li class="item"><a href="#">contacts</a></li>
@@ -17,7 +17,7 @@
                 <li class="item"><a href="#">about</a></li>
                 <li class="item"><a href="#">news</a></li>
             </ul>
-        </li>
-    </ul>
+        
+    </div>
 </body>
 </html>
